# pump

./: docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  main.db
backend/data/: main.db  schema.sql
backend/schema/: schema.sql
backend/src/: cors.rs  db.rs  main.rs  models.rs  rest.ipynb  rest.ps1
backend/src/config/: config.rs
backend/src/handlers/: create.rs  errors.rs  mod.rs  payload.rs  requests.rs
backend/src/handlers/endpoints/: create.rs  delete.rs  mod.rs  read.rs  update.rs  utils.rs
backend/src/handlers/endpoints/auth/: auth.rs  mod.rs
backend/src/models/: calories.rs  lift.rs  mod.rs  models.rs  weight.rs
frontend/: package-lock.json  package.json  tailwind.config.js  ts.config.json  webpack.config.js
frontend/app/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  setupProxy.js
frontend/src/api/: api.ts  payload.ts
frontend/src/app/: App.tsx  index.html  index.tsx
frontend/src/assets/: manifest.json
frontend/src/assets/styles/: index.css
frontend/src/component/: Chart.js  Header.js  Lift.js  LiftForm.js  Nav.js  SideBar.js  Table.js  form.js
frontend/src/component/calculator/: ActivityLevel.js  BMR.js  ImperialForm.js  MetricForm.js  Result.js
frontend/src/components/: Bmr.js  Chart.js  Header.js  SideBar.js  Table.js  api.ts  grid.tsx  lineChart.tsx  nav.tsx  panel.tsx  panelGroup.tsx  table.tsx
frontend/src/components/calculator/: EntryForm.js  ImperialForm.js  MetricForm.js  Result.js
frontend/src/components/charts/: calorie.tsx  lift.tsx  weight.tsx
(+6 files in other folders)
