[package]
name = "pump"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-session = {version = "0.10.1", features = ["redis-session"]}
actix-web = "4.8.0"
bcrypt = "0.17.0"
cargo-watch = "8.5.3"
env_logger = "0.11.3"
log = "0.4.22"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"

[profile.dev]
debug = true
opt-level = 0
overflow-checks = false
