[package]
name = "pump"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.8.0"
cargo-watch = "8.5.3"
chrono = "0.4.41"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.22"
mysql = "26.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"

[profile.dev]
opt-level = 2
debug = true
overflow-checks = true
